Addressed warnings